reive project structure

--- a/main.html
+++ b/main.html
@@ -27,6 +27,9 @@
 
         <div id="error" style="color:red; margin-top:10px;"></div>
 
+        <div>
+            <input type="search" class="search_location" placeholder="lat long">
+        </div>
     </div>
 
     <div id="map"></div>
@@ -41,8 +44,10 @@
   
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <script src="app.js"></script>
-  <script src="menu.js"></script>
+  <script src="app/map.js"></script>
+  <script src="app/app.js"></script>
+  <script src="app/menu.js"></script>
+  <script src="app/search_latlong.js"></script>
 
 </body>
 </html>
