--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
             <p>Drag & drop or click to upload Excel (.xlsx/.xls/.csv)</p>
         </div>
 
-        <div id="error" style="color:red; margin-top:10px;"></div>
+        <div id="error"></div>
 
         <div>
             <input type="search" class="search_location" placeholder="lat long">
